[package]
name = "iota-ed25519-address-wasm"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.2", features = ["js"], default_features = false }
hex = "0.4.3"
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "3d28b759b44ec50f27ff306751a1394d4881774a", default_features = false, features = ["tls"] }
iota-crypto = { version = "0.14.3", default-features = false, features = [ "ed25519", "blake2b" ] }
js-sys = "0.3.60"
serde_json = "1.0.86"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.33", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 's'