[package]
name = "iota-ed25519-address-wasm"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.2", features = ["js"], default_features = false }
hex = "0.4.3"
# iota-client = { path = "../iota.rs/client", default_features = false, features = ["tls"] }
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "develop", default_features = false, features = ["tls"] }
# iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "b5df2e1dbed095085fadb5f957104c577873ab4b", default_features = false, features = ["tls"] }
iota-crypto = { version = "0.15.2", default-features = false, features = [ "ed25519", "blake2b" ] }
js-sys = "0.3.60"
reqwest = { version = "0.11.12", default-features = false, features = [ "json" ] }
serde_json = "1.0.86"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.33", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 's'